switch to minified rdf-ext

--- a/edit.html
+++ b/edit.html
@@ -4,11 +4,7 @@
     <link href="lib/bootstrap.min.css" rel="stylesheet">
     <script src="lib/underscore-min.js" type="text/javascript"></script>
     <script src="lib/jquery-1.10.2.min.js" type="text/javascript"></script>
-    <script src="lib/rdf.js"></script>
-    <script src="lib/n3-browser.js"></script>
-    <script src="lib/jsonld.js"></script>
-    <script src="lib/rdf-ext.js"></script>
-    <!--    <script src="matcher.js" type="text/javascript"></script>-->
+    <script src="lib/rdf-ext.min.js"></script>
     <script src="src/uduvudu.js" type="text/javascript"></script>
     <script src="src/uduvudu-edit.js" type="text/javascript"></script>
 </head>
