--- a/visualizer.html
+++ b/visualizer.html
@@ -204,7 +204,7 @@
 <!-- container for literals -->
 <script id="unknowns" type="text/uduvudu-template">
     <div style="clear: both;">
-        <% _.each(unknowns, function(e) {print(template(e.unknown))}); %>
+        <% /*_.each(unknowns, function(e) {print(template(e.unknown))});*/ %>
     </div>
 </script>
 
