--- a/example_styles_rdf.html
+++ b/example_styles_rdf.html
@@ -5,7 +5,6 @@
     <script src="lib/underscore-min.js" type="text/javascript"></script>
     <script src="lib/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="lib/rdf-ext.min.js"></script>
-    <script src="matcher.js" type="text/javascript"></script>
     <script src="src/uduvudu.js" type="text/javascript"></script>
 </head>
 <body>
@@ -17,10 +16,6 @@
       </div>
     </div>
 
-    <!-- where the templates are injected -->
-    <div id="templates">
-    </div>
-
     <script type="text/javascript">
         // something about what is going on
         document.getElementById('main').innerHTML =  ''
@@ -29,10 +24,19 @@
         + '  <strong>Loading</strong> '+source+' is being loaded ...'
         + '</div>';
 
-        // prepare visualizer templates for uduvudu
-        $("#templates").load("templates.html");
+        // load styles (matcher and templates) from files
+        var styles = rdf.createGraph();
+        var matcher = new rdf.LdpStore();
 
-        // instantiate rdf-ext object
+        matcher.graph('matcher.ttl', function(graph, error) {
+            if (!error) {styles.addAll(graph);}
+        });
+        var template = new rdf.LdpStore();
+        template.graph('templates.ttl', function(graph, error) {
+            if (!error) {styles.addAll(graph);}
+        });
+
+        // instantiate rdf-ext data object
         var store = new rdf.LdpStore();
         var source = 'http://dbpedia.org/resource/Fribourg';
 
@@ -41,7 +45,7 @@
                 if (error == null) {
                     console.debug("successfully loaded "+graph.toArray().length+" triples");
                     // resource (entry for template search) is same as source in this example
-                    uduvudu.process(graph, {'resource': source} , function (out) {
+                    uduvudu.process(graph, {'resource': source, 'styles': styles} , function (out) {
                         // write the result of the processing in the main div
                         $('#main').html(out);
                         });
