--- a/templates.html
+++ b/templates.html
@@ -67,12 +67,12 @@
 </script>
 
 <script id="community" type="text/uduvudu-template">
-  <div style="max-height: 270px; width: 560px; background-color: lightgrey; padding: 4px; float: left; overflow-y: scroll;">
-  <div style=" width: 235px; overflow: hidden; margin: -4px;" class="pull-right">
-      <img style="min-width: 235px; min-height: 235px; max-width: 300px; max-height: 300px; margin-left: 10px;" src="<%-community.img_url.u%>" />
-  </div>
-    <%=template(community.label_comment)%>
-  </div>
+    <div style="max-height: 300px; width: 560px; background-color: lightgrey; padding: 4px; float: left; overflow-y: scroll;">
+    <div style=" width: 235px; overflow: hidden; margin: -4px; text-align: right;" class="pull-right">
+        <img style="max-height: 300px; max-width: 235px; margin-bottom: 10px; margin-left: 10px;" src="<%-community.img_url.u%>" />
+    </div>
+        <%=template(community.label_comment)%>
+    </div>
 </script>
 
 <script id="label_comment" type="text/uduvudu-template">
