--- a/graph.html
+++ b/graph.html
@@ -213,7 +213,8 @@ function tick() {
     <script type="text/javascript">
         // instantiate rdf-ext object
         var store = new rdf.LdpStore();
-        var source = 'http://dbpedia.org/resource/Blatten';
+        var source = 'http://www.w3.org/People/Berners-Lee/card';
+
 
        // something about what is going on
         document.getElementById('main').innerHTML =  ''
