--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <script type="text/javascript">
         // instantiate rdf-ext object
         var store = new rdf.LdpStore();
-        var source = 'http://dbpedia.org/resource/Fribourg';
+//        var source = 'http://dbpedia.org/resource/Fribourg';
+        var source = 'fribourg.n3';
+        var resource = 'http://dbpedia.org/resource/Fribourg';
 
        // something about what is going on
         document.getElementById('main').innerHTML =  ''
@@ -41,7 +43,7 @@
                 if (error == null) {
                     console.debug("successfully loaded "+graph.toArray().length+" triples");
                     // resource (entry for template search) is same as source in this example
-                    uduvudu.process(graph, {'resource': source} , function (out) {
+                    uduvudu.process(graph, {'resource': resource} , function (out) {
                         // write the result of the processing in the main div
                         $('#main').html(out);
                         });
