--- a/edit.html
+++ b/edit.html
@@ -1,91 +1,98 @@
 <html>
 <head>
-    <meta charset="UTF-8">
-    <link href="lib/bootstrap.min.css" rel="stylesheet">
-    <script src="lib/underscore-min.js" type="text/javascript"></script>
-    <script src="lib/jquery-2.1.3.min.js" type="text/javascript"></script>
-    <script src="lib/rdf-ext.min.js"></script>
-    <script src="src/uduvudu.js" type="text/javascript"></script>
-    <script src="src/uduvudu-edit.js" type="text/javascript"></script>
+<meta charset="UTF-8">
+<link href="lib/bootstrap.min.css" rel="stylesheet">
+<script src="dist/uduvudu-edit.js" type="text/javascript"></script>
+
 </head>
 <body>
-    <div class="container">
-      <div class="row">
-        <div id="content">
-            <div id="main">
-               <!-- location where to render to -->
-            </div>
-            <div id="editor">
-               <h2>edit</h2>
-               <div id="edit_area"></div>
-            </div>
-      </div>
+
+<div class="container">
+<div class="row">
+<div id="content">
+    <div id="main">
+       <!-- location where to render to -->
     </div>
-    <!-- where the templates are injected -->
-    <div id="visualizer">
-        <!-- container for literals -->
-        <script id="literals" type="text/uduvudu-template">
-            <div style="clear: both;">
-                <% _.each(literals, function(e) {print(template(e.literal))}); %>
-            </div>
-        </script>
+    <div id="editor">
+       <h2>edit</h2>
+       <div id="edit_area"></div>
 
-        <!-- container for literals -->
-        <script id="unknowns" type="text/uduvudu-template">
-            <div style="clear: both;">
-                <% /*_.each(unknowns, function(e) {print(template(e.unknown))});*/ %>
-            </div>
-        </script>
-
-        <!-- literal -->
-        <script id="literal" type="text/uduvudu-template">
-            <div style=" width: 140px; height: 140px; float: left; overflow: hidden;"><p title="<%-literal.subject.u%> - <%-literal.predicate.u%>"><b><%-literal.name.u%></b>:<br /> <%-literal.text.u%></p></div>
-        </script>
-
-        <!-- void -->
-        <script id="void" type="text/uduvudu-template">
-        </script>
-
-        <!-- unknown -->
-        <script id="unknown" type="text/uduvudu-template">
-          <div style=" width: 140px; height: 140px; float: left; overflow: hidden;">
-              <small><p><%=unknown.subject.u%><br />&#9608;<br /><%=unknown.predicate.u%><br />&#9608;<br /><%=unknown.object.u%></p></small>
-          </div>
-        </script>
     </div>
+</div>
+</div>
+<!-- where the templates are injected -->
+<div id="visualizer">
+<!-- container for literals -->
+<script id="literals" type="text/uduvudu-template">
+    <div style="clear: both;">
+    <% _.each(literals, function(e) {print(template(e.literal))}); %>
+    </div>
+</script>
 
-    <script type="text/javascript">
+<!-- container for literals -->
+<script id="unknowns" type="text/uduvudu-template">
+    <div style="clear: both;">
+    <% /*_.each(unknowns, function(e) {print(template(e.unknown))});*/ %>
+    </div>
+</script>
 
-        // instantiate rdf-ext store
-        var store = new rdf.LdpStore();
-        var source = 'http://dbpedia.org/resource/Fribourg';
-//        var source = 'http://data.ge.alod.ch/id/archivalresource/adl-l-1482';
-        var source = 'http://data.alod.ch/alod/sparql?query=construct+%7B%3Fsub+%3Fpred+%3Fobj.%7D+where+%7B%0A++graph+%3Fg%7B%0A++++%3Fsub+%3Fpred+%3Fobj.%0A%09%3Fsub+%3Fpred1+%3Chttp%3A%2F%2Fdata.helveticarchives.ch%2Fisil%2FCH-000027-1%3E.%0A%09%3Fsub+%3Fpred2+%3Chttp%3A%2F%2Fdata.alod.ch%2Falod%2Flevel%2Fseries%3E.%0A++%7D%0A%7D+%0ALIMIT+1000'
+<!-- literal -->
+<script id="literal" type="text/uduvudu-template">
+    <div style=" width: 140px; height: 140px; float: left; overflow: hidden;"><p title="<%-literal.subject.u%> - <%-literal.predicate.u%>"><b><%-literal.name.u%></b>:<br /> <%-literal.text.u%></p></div>
+</script>
 
-        // something about what is going on
+<!-- void -->
+<script id="void" type="text/uduvudu-template">
+</script>
+
+<!-- unknown -->
+<script id="unknown" type="text/uduvudu-template">
+  <div style=" width: 140px; height: 140px; float: left; overflow: hidden;">
+      <small><p><%=unknown.subject.u%><br />&#9608;<br /><%=unknown.predicate.u%><br />&#9608;<br /><%=unknown.object.u%></p></small>
+  </div>
+</script>
+</div>
+
+<script type="text/javascript">
+
+// instantiate rdf-ext store
+var store = new rdf.LdpStore();
+var source = 'http://dbpedia.org/resource/Fribourg';
+var source = 'http://dbpedia.org/sparql?default-graph-uri=http%3A%2F%2Fdbpedia.org&query=CONSTRUCT+WHERE+%7B%3Chttp%3A%2F%2Fdbpedia.org%2Fresource%2FFribourg%3E+%3Fp+%3Fo%7D&format=text%2Fturtle';
+
+// something about what is going on
+document.getElementById('main').innerHTML =  ''
++ '<div class="alert alert-info">'
++ '  <button type="button" class="close" data-dismiss="alert">&times;</button>'
++ '  <strong>Loading</strong> '+source+' is being loaded ...'
++ '</div>';
+
+// load triples
+store.graph(source, function (error, graph) {
+    if (error == null) {
+        console.debug("successfully loaded "+graph.toArray().length+" triples");
+        // resource (entry for template search) is same as source in this example
+        uduvudu.process(graph, function (out) {
+        // write the result of the processing in the main div
+        var main = document.getElementById('main')
+        // write the result of the processing in the main div
+        main.innerHTML = out;
+        // run scripts which were added
+        var codes = main.getElementsByTagName("script");   
+        for(var i=0;i<codes.length;i++)  
+        {  
+          eval(codes[i].text);
+        }
+        });
+    } else {
         document.getElementById('main').innerHTML =  ''
-        + '<div class="alert alert-info">'
+        + '<div class="alert alert-danger">'
         + '  <button type="button" class="close" data-dismiss="alert">&times;</button>'
-        + '  <strong>Loading</strong> '+source+' is being loaded ...'
+        + '  <strong>Error:</strong> '+ error +'.'
         + '</div>';
+        };
+    });
+</script>
 
-        // load triples
-        store.graph(source, function (graph, error) {
-                if (error == null) {
-                    console.debug("successfully loaded "+graph.toArray().length+" triples");
-                    // resource (entry for template search) is same as source in this example
-                    uduvudu.process(graph, function (out) {
-                        // write the result of the processing in the main div
-                        $('#main').html(out);
-                        });
-                    } else {
-                        document.getElementById('main').innerHTML =  ''
-                        + '<div class="alert alert-danger">'
-                        + '  <button type="button" class="close" data-dismiss="alert">&times;</button>'
-                        + '  <strong>Error:</strong> '+ error +'.'
-                        + '</div>';
-                    };
-            });
-    </script>
 </body>
 </html>
