--- a/example_styles_rdf.html
+++ b/example_styles_rdf.html
@@ -1,17 +1,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link href="lib/bootstrap.min.css" rel="stylesheet">
-    <script src="lib/underscore-min.js" type="text/javascript"></script>
-    <script src="lib/jquery-2.1.3.min.js" type="text/javascript"></script>
-    <script src="lib/rdf-ext.min.js"></script>
-    <script src="src/uduvudu.js" type="text/javascript"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="matcher.js" type="text/javascript"></script>
+    <script src="dist/uduvudu.js" type="text/javascript"></script>
 </head>
+
 <body>
     <div class="container">
         <!-- location where to render to -->
       <div class="row">
-        <div id="main">
+        <div id="main" style="width: 560px">
         </div>
       </div>
     </div>
@@ -31,31 +30,39 @@
         // load styles (matcher and templates) from files
         var styles = rdf.createGraph();
         var matcher = new rdf.LdpStore();
-
-        matcher.graph('matcher.ttl', function(graph, error) {
+        matcher.graph('matcher.ttl', function(error, graph) {
             if (!error) {styles.addAll(graph);}
         });
         var template = new rdf.LdpStore();
-        template.graph('templates.ttl', function(graph, error) {
+        template.graph('templates.ttl', function(error, graph) {
             if (!error) {styles.addAll(graph);}
         });
+        console.log(styles);
 
         // load triples
-        store.graph(source, function (graph, error) {
+        store.graph(source, function (error, graph) {
                 if (error == null) {
                     console.debug("successfully loaded "+graph.toArray().length+" triples");
                     // resource (entry for template search) is same as source in this example
                     uduvudu.process(graph, {'resource': source, 'styles': styles} , function (out) {
+                        // where to add the processed html
+                        var main = document.getElementById('main')
                         // write the result of the processing in the main div
-                        $('#main').html(out);
-                        });
-                    } else {
-                        document.getElementById('main').innerHTML =  ''
-                        + '<div class="alert alert-danger">'
-                        + '  <button type="button" class="close" data-dismiss="alert">&times;</button>'
-                        + '  <strong>Error:</strong> '+ error +'.'
-                        + '</div>';
-                    };
+                        main.innerHTML = out;
+                        // run scripts which were added
+                        var codes = main.getElementsByTagName("script");   
+                        for(var i=0;i<codes.length;i++)  
+                        {  
+                          eval(codes[i].text);
+                        }
+                    });
+                } else {
+                    document.getElementById('main').innerHTML =  ''
+                    + '<div class="alert alert-danger">'
+                    + '  <button type="button" class="close" data-dismiss="alert">&times;</button>'
+                    + '  <strong>Error:</strong> '+ error +'.'
+                    + '</div>';
+                };
             });
     </script>
 </body>
