--- a/example_styles_rdf.html
+++ b/example_styles_rdf.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="matcher.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jsonld@0.5.17/dist/jsonld.min.js"></script>
+    <script src="http://rdf-ext.bergnet.org/dist/rdf-ext-all-latest.min.js" type="text/javascript"></script>
     <script src="dist/uduvudu.js" type="text/javascript"></script>
 </head>
 
