--- a/graph.html
+++ b/graph.html
@@ -1,12 +1,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link href="lib/bootstrap.min.css" rel="stylesheet">
-    <script src="lib/underscore-min.js" type="text/javascript"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" crossorigin="anonymous"></script>
+    <script src="dist/uduvudu.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="lib/jquery-2.1.3.min.js" type="text/javascript"></script>
-    <script src="lib/rdf-ext.min.js"></script>
-    <script src="src/uduvudu.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="container">
@@ -91,8 +89,8 @@ links.forEach(function(link) {
   link.target = nodes[link.target] || (nodes[link.target] = {name: link.target, type: link.type});
 });
 
-var w = 1000,
-    h = 600;
+var w = $(window).width(),
+    h = $(window).height();
 
 var force = d3.layout.force()
     .size([w, h])
@@ -215,6 +213,7 @@ function tick() {
         var store = new rdf.LdpStore();
         var source = 'http://www.w3.org/People/Berners-Lee/card';
 
+        var source_query = 'http://dbpedia.org/sparql?query=CONSTRUCT%20%7B%20%3Chttp%3A%2F%2Fdbpedia.org%2Fresource%2FBern%3E%20%3Fp%20%3Fo.%20%3Fo%20%3Chttp%3A%2F%2Fwww.w3.org%2F2000%2F01%2Frdf-schema%23label%3E%20%3Fl%7D%20WHERE%20%7B%20%3Chttp%3A%2F%2Fdbpedia.org%2Fresource%2FBern%3E%20%3Fp%20%3Fo.%20OPTIONAL%20%7B%3Fo%20%3Chttp%3A%2F%2Fwww.w3.org%2F2000%2F01%2Frdf-schema%23label%3E%20%3Fl.%7D%7D&format=text%2Fturtle'
 
        // something about what is going on
         document.getElementById('main').innerHTML =  ''
@@ -224,7 +223,7 @@ function tick() {
         + '</div>';
 
         // load triples
-        store.graph(source, function (graph, error) {
+        store.graph(source, function (error, graph) {
                 if (error == null) {
                     console.debug("successfully loaded "+graph.toArray().length+" triples");
                     // resource (entry for template search) is same as source in this example
@@ -233,6 +232,7 @@ function tick() {
                         $('#main').html(out);
                         });
                     } else {
+                        console.log(error)
                         document.getElementById('main').innerHTML =  ''
                         + '<div class="alert alert-danger">'
                         + '  <button type="button" class="close" data-dismiss="alert">&times;</button>'
